--- a/MgL/Reference implementation.ipynb
+++ b/MgL/Reference implementation.ipynb
@@ -85,8 +85,8 @@
     "parser.add_argument('--LogSavedir', default = 'Case O' )\n",
     "parser.add_argument('--savedir', default = 'Exper. 001 ( MgL )', help = \"Experimental result saving address sub-file name\")\n",
     "\n",
-    "parser.add_argument('--DataRoot', default = os.path.join('/data4/dj/Datasets/Bearings/NoisyLabels'))\n",
-    "parser.add_argument('--Datasets', default = [ 'CWRU', 'XJTU', 'Single', 'Damage', 'Multiple' ] )\n",
+    "parser.add_argument('--DataRoot', default = os.path.join('../NoisyLabels'))\n",
+    "parser.add_argument('--Datasets', default = [ 'CWRU', 'XJTU', 'NEPU', 'Multiple', 'Custom' ] )\n",
     "parser.add_argument('--NoiseType', default = { 'Asymmetric':[ 25, 30, 35, 40, 45 ], 'Symmetric':[ 50, 60, 70, 80, 90 ] } )\n",
     "\n",
     "parser.add_argument('--Dimension', default = 2**6 )\n",
